# cpp_protobuf

./: CMakeLists.txt  messages.proto
src/protobuf_parser/: DelimitedMessagesStreamParser.hpp  helpers.hpp
test/: CMakeLists.txt  Test_DelimitedMessagesStreamParser.cpp  Test_Helpers.cpp  utils.hpp
